https://github.com/trustoverip/ctwg-mrg-gen/issues/2
Add grouptag filter for terms filtering

Signed-off-by: Sid Haniff <syed_haniff@hotmail.com>